vlib/v/checker/tests/hex_literal_overflow.vv
s := 'this hex character literal, \xffffffff, should be caught by the checker'
println(s)
